font spacing fix

--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,7 @@
   font-family: 'basier_circlebold', sans-serif !important;
   font-size: 3.7em;
   color: #2D2D2D;
-  letter-spacing: 3.6px;
+  letter-spacing: 1.3px;
   padding-bottom: .1em;
 }
 
